kubernetes/apps/it-tools/it-tools.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: it-tools
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: it-tools
  namespace: it-tools
  labels:
    app.kubernetes.io/name: it-tools
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: it-tools
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container:  it-tools
      labels:
        app.kubernetes.io/name: it-tools
    spec:
      containers:
      - name: it-tools
        image: corentinth/it-tools:latest
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        ports:
        - containerPort: 80
          name: it-tools
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: it-tools
  name: it-tools
  namespace: it-tools
spec:
  ports:
    - port: 80
  selector:
    app.kubernetes.io/name: it-tools
  type: ClusterIP
