kubernetes/apps/it-tools/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: it-tools-ingressroute-tailscale
  namespace: it-tools
  annotations:
    kubernetes.io/ingress.class: traefik-tailscale
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`it-tools.internal.dmhosted.com`)
      kind: Rule
      services:
        - name: it-tools
          port: 80
  tls:
    secretName: it-tools-certificate-secret-internal
